...
            "state" : "translated",
            "value" : "タグを追加"
          }
        }
      }
    },
    "Add to favorites" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "お気に入りに追加"
          }
...
            "state" : "machine_translated",
            "value" : "やることを追加"
          }
        }
      }
    },
    "Add Todo" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やることを追加"
          }
...
            "state" : "machine_translated",
            "value" : "タグ${tag}を削除"
          }
        }
      }
    },
    "Delete todo" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やることを削除"
          }
...
            "state" : "machine_translated",
            "value" : "手動"
          }
        }
      }
    },
    "Mark as complete" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "完了にする"
          }
...
            "state" : "machine_translated",
            "value" : "お気に入り"
          }
        }
      }
    },
    "Mark as incomplete" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "未完了にする"
          }
...
            "state" : "machine_translated",
            "value" : "重複の可能性"
          }
        }
      }
    },
    "Remove from favorites" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "お気に入りから削除"
          }
...
            "state" : "machine_translated",
            "value" : "やることが見つかりません"
          }
        }
      }
    },
    "Todos" : {
      "localizations" : {
        "ja" : {
          "stringUnit" : {
            "state" : "machine_translated",
            "value" : "やること"
          }
...
